--- a/src/CSS/ContentArea.css
+++ b/src/CSS/ContentArea.css
@@ -270,7 +270,7 @@ footer {
     font-style: italic;
   }
   footer {
-    position: fixed;
+    position: relative;
     width: 100vw;
     height: 7vh;
     bottom: -1vh;
