--- a/src/CSS/ContentArea.css
+++ b/src/CSS/ContentArea.css
@@ -97,6 +97,7 @@ h2:hover::after {
   display: flex;
   flex-direction: column;
   height: 70vh;
+  max-height: 70vh;
   width: 55vw;
   box-sizing: border-box;
   padding: 2.5vh;
