trying chapGPT recommendations (min height)

--- a/src/CSS/ContentArea.css
+++ b/src/CSS/ContentArea.css
@@ -7,6 +7,7 @@
   text-align: center;
   justify-content: start;
   position: relative;
+  overflow: hidden;
 }
 
 header {
@@ -98,6 +99,7 @@ h2:hover::after {
   flex-direction: column;
   height: 75vh;
   max-height: 75vh;
+  min-height: 60vh; /* Set a minimum height */
   width: 55vw;
   box-sizing: border-box;
   padding: 2.5vh;
@@ -106,7 +108,7 @@ h2:hover::after {
   border-left: 0.6vh rgb(91, 174, 176) solid;
   border-right: 0.6vh rgb(91, 174, 176) solid;
   transform: translateX(2.5vh);
-  overflow: auto;
+  overflow-y: auto; /* Enable vertical scrolling */
   text-align: right;
   align-items: right;
   font-size: 2.5vh;
@@ -146,7 +148,7 @@ footer {
 
 @media (max-width: 750px) {
   #contentArea {
-    height: 81vh;
+    height: auto; /* Use auto to adjust to content height */
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -197,18 +199,20 @@ footer {
     display: flex;
     flex-direction: column;
     max-height: 60vh;
+    min-height: 50vh; /* Ensure there's a minimum height */
     width: 96vw;
     border-bottom: 0.75vh rgb(91, 174, 176) solid;
     border-top: 0.75vh rgb(91, 174, 176) solid;
     border-left: 0.5vh rgb(91, 174, 176) double;
     border-right: 0.5vh rgb(91, 174, 176) double;
-    overflow: scroll;
+    overflow-y: scroll;
     text-align: center;
     align-items: center;
     font-size: 2vh;
     padding: 2.5vh;
     box-sizing: border-box;
     transform: none;
+    
   }
 
   #contactButton {
