--- a/src/CSS/ImageSide.css
+++ b/src/CSS/ImageSide.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: row;
   position: relative;
+  overflow: hidden; /* Ensure no overflow on the image side */
+
 }
 
 #imageSideBackground {
