--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -34,7 +34,7 @@ p {
   overflow: hidden;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 850px) and (orientation: landscape) {
   body {
     margin: 0;
     padding: 0;
