--- a/src/CSS/ImageSide.css
+++ b/src/CSS/ImageSide.css
@@ -74,7 +74,7 @@
   visibility: visible;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 850px) and (orientation: landscape) {
   #santiImage {
     display: none;
   }
