--- a/src/CSS/NavBar.css
+++ b/src/CSS/NavBar.css
@@ -31,7 +31,7 @@ ul {
   list-style: none;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 850px) and (orientation: landscape) {
   .navbar {
     width: 100vw !important;
     height: 4vh;
