--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -176,7 +176,7 @@
   font-style: italic;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 850px) and (orientation: landscape) {
   #overalGrid {
     width: 100vw;
     height: 100vh;
