--- a/src/CSS/DigitalCard.css
+++ b/src/CSS/DigitalCard.css
@@ -35,7 +35,7 @@
   background-color: rgb(46, 59, 120);
 }
 
-@media (max-width: 850px) and (orientation: landscape) {
+@media (max-width: 850px), (orientation: landscape) {
   #digitalCardTitle {
     width: 75%;
     text-align: center;
