--- a/src/CSS/DigitalCard.css
+++ b/src/CSS/DigitalCard.css
@@ -11,7 +11,7 @@
 
 #digitalCard {
   transform: translateY(-2.5vh);
-
+  padding-top: 1vh;
   height: 50vh;
   width: auto;
   box-shadow: 0.5vh 0.5vh 1vh #000000b3;
@@ -54,6 +54,8 @@
     height: 63vw;
     width: auto;
     box-shadow: 0.5vh 0.5vh 1vh #000000b3;
+    padding-top: 0;
+
   }
 
   .contactButtonDC {
