--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -9,7 +9,7 @@ root {
 body {
   margin: 0;
   padding: 0;
-  font-size: 3vh;
+  font-size: 1.2rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   overflow: hidden;
 }
@@ -38,7 +38,7 @@ p {
   body {
     margin: 0;
     padding: 0;
-    font-size: 2.5vh;
+    font-size: 1.2rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow: hidden;
   }
