--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -59,6 +59,7 @@
   max-height: 100%;
   object-fit: cover;
   box-shadow: 0.25vh 0.25vh 0.5vh rgba(0, 0, 0, 0.7);
+  margin-bottom: .25vh;
 }
 
 .square p {
