--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -19,26 +19,13 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: rgb(46, 59, 120); /* Darker blue */
+  background-color: rgb(91, 174, 176);
   border-radius: 0.5vh;
   color: #ffffff;
   padding: 2vh;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgb(0, 0, 0);
   position: relative;
   z-index: 1;
-}
-
-.skillsDiv::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(91, 174, 176); /* Tealish blue */
-  border-radius: 0.5vh;
-  z-index: -1;
-  transform: translate(10px, 10px);
 }
 
 .skillsDiv h3 {
